--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
 
-    <div>
+    <div id="game" class="main-container"> 
         <h1>The Psychic Game</h1>
-        <h2>Guess what letter I'm thinking of.</h2>
-        <p id="wins"></p>
-        <p id="losses"></p>
-        <p id="guesses-left"></p>
-        <p id="letters-guessed"></p>
+        <h2>Guess what letter I'm thinking of</h2>
+        <p>Wins: 0</p>
+        <p>Losses: 0</p>
+        <p>Guesses Left: 9</p>
+        <p>Your Guesses So Far: </p>
     </div>
+
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
