--- a/index.html
+++ b/index.html
@@ -4,17 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <title>Psychic Game</title>
 </head>
 <body>
 
-    <div id="game" class="main-container"> 
-        <h1>The Psychic Game</h1>
-        <h2>Guess what letter I'm thinking of</h2>
-        <p>Wins: 0</p>
-        <p>Losses: 0</p>
-        <p>Guesses Left: 9</p>
-        <p>Your Guesses So Far: </p>
+    <div id="game" class="main-container">
+        <div class="row">
+            <div class="col-md-4"></div> 
+            <div class="col-md-4">
+                <h1>The Psychic Game</h1>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <h2>Guess what letter I'm thinking of</h2>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <p>Wins: 0</p>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <p>Losses: 0</p>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <p>Guesses Left: 9</p>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4" id="guesses">
+                <p>Your Guesses So Far: </p>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <script type="text/javascript" src="assets/javascript/game.js"></script>
